<resources>
    <string name="app_name">Chessout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="dialog_club_details">Club details</string>
    <string name="hint_club_name">Club name</string>
    <string name="hint_club_shortName">Short name</string>
    <string name="hint_club_email">Email</string>
    <string name="hint_club_country">Country</string>
    <string name="hint_club_city">City</string>
    <string name="hint_club_homePage">Home page</string>
    <string name="hint_club_description">Club description</string>
</resources>
