<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/chess_king_and_rook_v1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_club_details"/>

    </LinearLayout>
    <EditText
        android:id="@+id/clubName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_club_name"/>
    <EditText
        android:id="@+id/shortName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_club_shortName"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_club_email"/>
    <EditText
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_club_country"/>
    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_club_city"/>
    <EditText
        android:id="@+id/homePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_club_homePage"/>
    <EditText
        android:id="@+id/clubDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_club_description"/>

</LinearLayout>