<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="eu.chessout.v2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_userDashboardFragment"
            app:destination="@id/userDashboardFragment" />
        <action
            android:id="@+id/action_navigation_home_to_tournamentDashboardFragment"
            app:destination="@id/tournamentDashboardFragment" />
        <action
            android:id="@+id/action_navigation_home_to_roundPagerFragment"
            app:destination="@id/roundPagerFragment" />
        <action
            android:id="@+id/action_navigation_home_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>

    <fragment
         android:id="@+id/navigation_dashboard"
         android:name="eu.chessout.v2.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="eu.chessout.v2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/signInActivity"
        android:name="eu.chessout.v2.SignInActivity"
        android:label="activity_sign_in"
        tools:layout="@layout/activity_sign_in">

    </activity>
    <fragment
        android:id="@+id/navigation_dashboard02"
        android:name="eu.chessout.v2.ui.dashboard02.Dashboard02Fragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard02">
        <action
            android:id="@+id/action_navigation_dashboard02_to_tournaments_navigation"
            app:destination="@id/tournaments_navigation" />
        <action
            android:id="@+id/action_navigation_dashboard02_to_clubPlayersFragment"
            app:destination="@id/clubPlayersFragment" />
        <action
            android:id="@+id/action_navigation_dashboard02_to_userDashboardFragment"
            app:destination="@id/userDashboardFragment" />
        <action
            android:id="@+id/action_navigation_dashboard02_to_clubDashboardFragment"
            app:destination="@id/clubDashboardFragment" />
        <action
            android:id="@+id/action_navigation_dashboard02_to_followedPlayersFragment"
            app:destination="@id/followedPlayersFragment" />
    </fragment>
    <fragment
        android:id="@+id/clubCreateDialogFragment"
        android:name="eu.chessout.v2.ui.club.ClubCreateDialogFragment"
        android:label="ClubCreateDialogFragment" />
    <fragment
        android:id="@+id/navigation_my_clubs_fragment"
        android:name="eu.chessout.v2.ui.club.myclubs.MyClubsFragment"
        android:label="My clubs"
        tools:layout="@layout/my_clubs_fragment">
        <action
            android:id="@+id/action_navigation_my_clubs_fragment_to_joinClubFragment"
            app:destination="@id/navigation_join_club_fragment" />
        <action
            android:id="@+id/action_navigation_my_clubs_fragment_to_joinClubByQrCodeFragment"
            app:destination="@id/joinClubByQrCodeFragment" />
        <action
            android:id="@+id/action_navigation_my_clubs_fragment_to_clubDashboardFragment"
            app:destination="@id/clubDashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/tournaments_navigation"
        android:name="eu.chessout.v2.ui.tournament.tournaments.TournamentsFragment"
        android:label="Tournaments"
        tools:layout="@layout/tournaments_fragment">
        <action
            android:id="@+id/action_tournaments_navigation_to_tournamentDashboardFragment"
            app:destination="@id/tournamentDashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_join_club_fragment"
        android:name="eu.chessout.v2.ui.club.joinclub.JoinClubFragment"
        android:label="Join club">
        <action
            android:id="@+id/action_navigation_join_club_fragment_to_navigation_my_clubs_fragment"
            app:destination="@id/navigation_my_clubs_fragment"
            app:popUpTo="@+id/navigation_my_clubs_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/tournamentDashboardFragment"
        android:name="eu.chessout.v2.ui.tournament.tournaments.dashboard.TournamentDashboardFragment"
        android:label="Tournament dashboard"
        tools:layout="@layout/tournament_dashboard_fragment">
        <argument
            android:name="tournamentId"
            app:argType="string" />
        <argument
            android:name="clubId"
            app:argType="string" />
        <action
            android:id="@+id/action_tournamentDashboardFragment_to_tournamentPlayersFragment"
            app:destination="@id/tournamentPlayersFragment" />
        <action
            android:id="@+id/action_tournamentDashboardFragment_to_roundPagerFragment"
            app:destination="@id/roundPagerFragment" />
        <argument
            android:name="totalRounds"
            app:argType="integer" />
        <action
            android:id="@+id/action_tournamentDashboardFragment_to_stangingsPagerFragment"
            app:destination="@id/stangingsPagerFragment" />
    </fragment>
    <fragment
        android:id="@+id/clubPlayersFragment"
        android:name="eu.chessout.v2.ui.club.players.ClubPlayersFragment"
        android:label="Club players"
        tools:layout="@layout/club_players_fragment">
        <action
            android:id="@+id/action_clubPlayersFragment_to_playerDashboardFragment"
            app:destination="@id/playerDashboardFragment" />
        <argument
            android:name="archivedPlayers"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/tournamentPlayersFragment"
        android:name="eu.chessout.v2.ui.tournament.tournaments.players.TournamentPlayersFragment"
        android:label="Tournament players">
        <argument
            android:name="tournamentId"
            app:argType="string" />
        <argument
            android:name="clubId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/roundPagerFragment"
        android:name="eu.chessout.v2.ui.tournament.tournaments.rounds.pager.RoundsPagerFragment"
        android:label="Tournament rounds">
        <argument
            android:name="clubId"
            app:argType="string" />
        <argument
            android:name="tournamentId"
            app:argType="string" />
        <argument
            android:name="totalRounds"
            app:argType="integer" />
        <argument
            android:name="roundId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/playerDashboardFragment"
        android:name="eu.chessout.v2.ui.playerdashboard.PlayerDashboardFragment"
        android:label="Player dashboard"
        tools:layout="@layout/player_dashboard_fragment">
        <argument
            android:name="clubId"
            app:argType="string" />
        <argument
            android:name="playerId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/stangingsPagerFragment"
        android:name="eu.chessout.v2.ui.tournament.tournaments.standings.pager.StandingsPagerFragment"
        android:label="stangings_pager_fragment"
        tools:layout="@layout/standings_pager_fragment">
        <argument
            android:name="clubId"
            app:argType="string" />
        <argument
            android:name="tournamentId"
            app:argType="string" />
        <argument
            android:name="totalRounds"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/userDashboardFragment"
        android:name="eu.chessout.v2.ui.userdashboard.UserDashboardFragment"
        android:label="user_dashboard_fragment"
        tools:layout="@layout/user_dashboard_fragment">
        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/clubDashboardFragment"
        android:name="eu.chessout.v2.ui.club.clubdashboard.ClubDashboardFragment"
        android:label="Club info"
        tools:layout="@layout/club_dashboard_fragment">
        <argument
            android:name="clubId"
            app:argType="string" />
        <action
            android:id="@+id/action_clubDashboardFragment_to_clubFollowersFragment"
            app:destination="@id/clubFollowersFragment" />
    </fragment>
    <fragment
        android:id="@+id/joinClubByQrCodeFragment"
        android:name="eu.chessout.v2.ui.club.joinclubbyqrcode.JoinClubByQrCodeFragment"
        android:label="Scan club qr code"
        tools:layout="@layout/join_club_by_qr_code_fragment" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="eu.chessout.v2.ui.chat.ChatFragment"
        android:label="ChatFragment">
        <argument
            android:name="type"
            app:argType="string" />
        <argument
            android:name="clubId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="tournamentId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="roundId"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="postId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/followedPlayersFragment"
        android:name="eu.chessout.v2.ui.club.followedplayers.FollowedPlayersFragment"
        android:label="followed_players_fragment"
        tools:layout="@layout/followed_players_fragment">
        <action
            android:id="@+id/action_followedPlayersFragment_to_playerDashboardFragment"
            app:destination="@id/playerDashboardFragment" />
    </fragment>
    <fragment
        android:id="@+id/clubFollowersFragment"
        android:name="eu.chessout.v2.ui.club.clubfollowers.ClubFollowersFragment"
        android:label="club_followers_fragment"
        tools:layout="@layout/club_followers_fragment">
        <argument
            android:name="clubId"
            app:argType="string" />
    </fragment>
</navigation>